<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_nvabar_item" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_nvabar_item" />
    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_add_post"
        android:title="@string/post_nvabar_item" />
    <item
        android:id="@+id/feed"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed_nvabar_item" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_nvabar_item" />

</menu>