<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/post_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:paddingBottom="15dp"
            android:text="@string/username"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/delete_post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:backgroundTint="@color/fui_transparent"
            app:srcCompat="@drawable/baseline_delete_forever_24"
            android:contentDescription="@string/cancella_post" />

    </LinearLayout>

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_image"
        android:contentDescription="@string/post" />

    <TextView
        android:id="@+id/post_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_image"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="@string/descrizione" />

    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_below="@+id/post_description"
        android:paddingBottom="10dp"/>

</RelativeLayout>
