<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.AccountEditActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/modifica_profilo"
        android:textSize="22sp"
        />

    <LinearLayout
        android:id="@+id/necessary_linear_layout"
        android:layout_below="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp">

        <io.getstream.avatarview.AvatarView
            android:id="@+id/profile_image_account_settings"
            android:layout_width="170dp"
            android:layout_height="170dp"

            app:avatarViewBorderWidth="4dp"
            app:avatarViewPlaceholder="@drawable/ic_profile" />
    </LinearLayout>

    <TextView
        android:id="@+id/change_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/necessary_linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/change_profile_image"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_name_account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_profile_image"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/full_name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_username_account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_name_account_settings"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/username"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_bio_account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_username_account_settings"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/bio_limit"
        android:inputType="textMultiLine"
        app:counterEnabled="true"
        app:counterMaxLength="140">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_bio_account_settings">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/close_account_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/discard_changes"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_close"
                android:backgroundTint="@color/pp_light_red"
                android:text="@string/discard_changes"
                app:srcCompat="@drawable/ic_close" />

            <View
                android:layout_width="16dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/save_account_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save_changes"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_check"
                android:backgroundTint="@color/pp_light_green"
                android:text="@string/save_changes" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>